--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,16 @@
-.page
-{
+.page {
     margin: 20px;
 }
 
-.interactions
-{
+.interactions {
     text-align: center;
 }
 
-.table
-{
+.table {
     margin: 20px 0;
 }
 
-.table-header
-{
+.table-header {
     display: flex;
     line-height: 24px;
     font-size: 16px;
@@ -22,8 +18,7 @@
     justify-content: space-between;
 }
 
-.table-empty
-{
+.table-empty {
     margin: 200px;
     text-align: center;
     font-size: 16px;
